updated to use automatic cat var subsetting (Spark), using log transformation before doing regression